--- a/dev/sass/_groupView.scss
+++ b/dev/sass/_groupView.scss
@@ -28,7 +28,8 @@ body {
         }
 
         @media (max-width:320px) {
-            right: 25px;
+            right: 0px;
+            @include button(50px, 100px, $colorSecondary2, $colorMain1, $colorMain1);
         }
 
 
