--- a/dev/sass/_groupShow.scss
+++ b/dev/sass/_groupShow.scss
@@ -38,22 +38,22 @@ body {
     margin: 0 auto;
     .tab {
         overflow: hidden;
-        .tabs1{
-            background-color: white;
-            color: $colorMain1;
-            padding: 10px 15px;
-            border-top-left-radius: 5px;
-            width: 94px;
-            border-bottom: 1px solid lightgray;
-        }
-        .tabs2{
-            background-color: lightgray;
-            color: white;
-            padding: 10px 15px;
-            border-top-right-radius: 5px;
-            width: 94px;
-            border-bottom: 1px solid lightgray;
-        }
+        // .tabs1{
+        //     background-color: white;
+        //     color: $colorMain1;
+        //     padding: 10px 15px;
+        //     border-top-left-radius: 5px;
+        //     width: 94px;
+        //     border-bottom: 1px solid lightgray;
+        // }
+        // .tabs2{
+        //     background-color: lightgray;
+        //     color: white;
+        //     padding: 10px 15px;
+        //     border-top-right-radius: 5px;
+        //     width: 94px;
+        //     border-bottom: 1px solid lightgray;
+        // }
     }
     .tabcontent {
         display: none;
@@ -426,6 +426,9 @@ body {
                 }
                 .btnsAct {
                     margin-top: 60px;
+                    border:1px solid red;
+                    display: flex;
+                    text-align: center;
                     button{
                         margin: 5px;
                         margin-bottom: 15px;
