group css advice

--- a/dev/sass/_blogView.scss
+++ b/dev/sass/_blogView.scss
@@ -147,7 +147,7 @@ a {
     .blogCardsBlockView {
         // border: 1px solid red;
         margin-bottom: 40px;
-        margin-top: 50px;
+        // margin-top: 10px;
 
         #blogCardsAll {
             display: flex;
