--- a/dev/sass/_search.scss
+++ b/dev/sass/_search.scss
@@ -1,25 +1,25 @@
-.groupViewSearchBar{
-    width: 100%;
-    margin-top: 120px;
-    height: 32px;
-    margin: 120px 50px auto auto;
-    display: flex;
-    justify-content: flex-end;
-    input{       
-        background-color: lightgray;
-        border-radius: 5px 5px 5px 5px;
-    }
-    button{
-        width: 30px;
-        padding: 0;
-        margin: 0;
-        border: none;
-        background-color: lightgray;
-        border-radius: 0px 5px 5px 0px;
-        height: 0px;       
-        img{
-            width: 25px;       
-            height: 25px;                       
-        }
-    }
-}
+// .groupViewSearchBar{
+//     width: 100%;
+//     margin-top: 80px;
+//     height: 32px;
+//     margin: 120px 50px auto auto;
+//     display: flex;
+//     justify-content: flex-end;
+//     input{       
+//         background-color: lightgray;
+//         border-radius: 5px 5px 5px 5px;
+//     }
+//     button{
+//         width: 30px;
+//         padding: 0;
+//         margin: 0;
+//         border: none;
+//         background-color: lightgray;
+//         border-radius: 0px 5px 5px 0px;
+//         height: 0px;       
+//         img{
+//             width: 25px;       
+//             height: 25px;                       
+//         }
+//     }
+// }
