--- a/dev/sass/_setupGroup.scss
+++ b/dev/sass/_setupGroup.scss
@@ -6,7 +6,7 @@
     overflow: hidden;
 }
 .startgroupcont{
-    border:1px solid red;
+    // border:1px solid red;
     background-color: $colorMain2;
     padding: 20px 10px 20px 10px;
     font-size: $content;
