--- a/dev/sass/_homepageBody.scss
+++ b/dev/sass/_homepageBody.scss
@@ -157,6 +157,7 @@
         top: 0;
         right: 0;
         background-color: $colorMain1;
+        padding-top: 150px;
     }
 
     .right-background-content {
