--- a/dev/sass/_blogView.scss
+++ b/dev/sass/_blogView.scss
@@ -1,5 +1,15 @@
 @import "./variables";
 
+@media screen and (max-width: $breakpoint-md) {
+    .popular {
+        display: none;
+    }
+
+    .blogCont {
+        min-width: 100%;
+    }
+}
+
 * {
     box-sizing: border-box;
 }
@@ -18,7 +28,7 @@ a {
         right: 0;
         @include button(50px, 170px, $colorSecondary2, $colorMain1, $colorMain1);
 
-        @media (max-width:768px) {
+        @media (max-width: 768px) {
             // border: 1px solid red;
             @include button(35px, 100px, $colorSecondary2, $colorMain1, $colorMain1);
             top: 50vh;
@@ -29,14 +39,13 @@ a {
             right: 0px;
         }
 
-
         p {
             font-size: $subtitle;
             color: $colorMain2;
             writing-mode: vertical-lr;
             margin: 0;
 
-            @media (max-width:768px) {
+            @media (max-width: 768px) {
                 font-size: $s_content;
             }
         }
@@ -59,10 +68,7 @@ a {
 //     z-index: 10;
 //     top: 300px;
 //     right: 0;
-
-
 // }
-
 .blogViewSearchBar {
     // border: 1px solid blue;
     width: 600px;
@@ -72,7 +78,7 @@ a {
     display: flex;
     justify-content: flex-end;
 
-    @media (max-width:768px) {
+    @media (max-width: 768px) {
         // border: 1px solid red;
         width: 250px;
     }
@@ -98,7 +104,6 @@ a {
 
         img {
             width: 25px;
-
             height: 25px;
             // border: 1px solid red;
         }
@@ -108,9 +113,9 @@ a {
 .chooseBlock {
     // width: 100%;
     margin: 0;
+
     // display: flex;
     // justify-content: flex-end;
-
     .blogFBtn {
         border: none;
 
@@ -122,11 +127,10 @@ a {
     .blogFBtn3 {
         margin-right: 40px;
 
-        @media (max-width:768px) {
+        @media (max-width: 768px) {
             // border: 1px solid red;
             margin-right: 10px;
         }
-
     }
 }
 
@@ -138,8 +142,8 @@ a {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
-        // border: 1px solid red;
 
+        // border: 1px solid red;
         .cardBlogOnBlogView {
             margin: 20px;
             // border: 1px solid blue;
@@ -158,17 +162,7 @@ a {
             justify-content: space-around;
             // justify-content: center;
         }
-
     }
-
-
-
-
-
-
-
-
-
 
     // -------------手機版輪播
     .groupPhoneCardBlogCarousel {
@@ -183,16 +177,12 @@ a {
             max-width: 300px;
             margin: 0 auto;
             height: 500px;
-
         }
 
         .groupCarouselIcon {
             background-color: $colorMain1;
             width: 30px;
             height: 50px;
-
         }
-
-
     }
 }
