--- a/dev/sass/_blogView.scss
+++ b/dev/sass/_blogView.scss
@@ -17,28 +17,26 @@
 body {
     margin: 0 auto;
     background-color: $colorSecondary2;
+    width: 100%;
 }
 
 a {
     .addBlogBTN {
-        border: 1px solid red;
+        // border: 1px solid red;
         z-index: 5;
         position: fixed;
         top: 300px;
         right: 0;
-        @include button(50px, 170px, $colorSecondary2, $colorMain1, $colorMain1);
+        @include button(50px, 150px, $colorSecondary2, $colorMain1, $colorMain1);
 
         @media (max-width: 768px) {
             // border: 1px solid red;
             @include button(35px, 100px, $colorSecondary2, $colorMain1, $colorMain1);
             top: 50vh;
         }
-
-
         @media (max-width:320px) {
             right: 0px;
         }
-
         p {
             font-size: $subtitle;
             color: $colorMain2;
@@ -49,40 +47,24 @@ a {
                 font-size: $s_content;
             }
         }
-
         p:hover {
             color: $colorMain1;
         }
     }
-
-    // img {
-    //     width: 50%;
-    //     margin-left: 60px;
-    //     // margin-top: 100px;
-    // }
 }
-
-// .writeNewBlog {
-//     position: fixed;
-//     // right: -5%;
-//     z-index: 10;
-//     top: 300px;
-//     right: 0;
-// }
 .blogViewSearchBar {
     // border: 1px solid blue;
     width: 600px;
-    margin-top: 120px;
     height: 32px;
-    margin: 120px 50px auto auto;
+    margin: 80px 50px auto auto;
     display: flex;
     justify-content: flex-end;
-
     @media (max-width: 768px) {
         // border: 1px solid red;
         width: 250px;
+        margin: 0 auto;
+        margin-top: 30px;
     }
-
     input {
         background-color: lightgray;
         border: none;
@@ -100,6 +82,7 @@ a {
         // font-size: $s_content;
         font-size: $s_content;
         margin-left: 10px;
+        // margin-right: 20px;
         @include button(70px, 30px, $colorSecondary2, $colorMain1, $colorMain1);
 
         img {
@@ -113,25 +96,30 @@ a {
 .chooseBlock {
     // width: 100%;
     margin: 0;
-
-    // display: flex;
-    // justify-content: flex-end;
-    .blogFBtn {
-        border: none;
-
-        &:hover {
-            color: $colorMain1;
+    // border: 1px solid red;
+    .blogBtn{
+        .blogFBtn {
+            border: none;   
+            &:hover {
+                color: $colorMain1;
+            }
+        }   
+        .blogFBtn3 {
+            margin-right: 40px;  
+            @media (max-width:768px) {
+                margin: 0 auto;
+                margin-right: 0px;
+            }
         }
-    }
-
-    .blogFBtn3 {
-        margin-right: 40px;
-
-        @media (max-width: 768px) {
-            // border: 1px solid red;
-            margin-right: 10px;
+        @media (max-width:768px) {
+            margin: 0 auto;
         }
-    }
+    } 
+    @media (max-width:576px) {
+        // border: 1px solid red;
+        width: 90%;
+        margin-left: 5%;
+    }  
 }
 
 .container {
