--- a/dev/sass/_nav.scss
+++ b/dev/sass/_nav.scss
@@ -120,6 +120,8 @@
 @media screen and (max-width: 950px){
   .mainBody{
     .navBg{
+      // width: 375px;
+      // width: 100%;
       height: 70px;
       .nav {
         display: none;
