--- a/dev/sass/_blogView.scss
+++ b/dev/sass/_blogView.scss
@@ -1,183 +1,183 @@
-        @import "./variables";
-@media screen and (max-width: $breakpoint-md) {
-    .popular {
-        display: none;
-    }
-    .blogCont {
-        min-width: 100%;
-    }
-}
-
-* {
-    box-sizing: border-box;
-}
-
-body {
-    margin: 0 auto;
-    background-color: $colorSecondary2;
-    width: 100%;
-}
-
-a {
-    .addBlogBTN {
-        // border: 1px solid red;
-        z-index: 5;
-        position: fixed;
-        top: 300px;
-        right: 0;
-        @include button(50px, 170px, $colorSecondary2, $colorMain1, $colorMain1);
-        @media (max-width: 768px) {
-            // border: 1px solid red;
-            @include button(35px, 100px, $colorSecondary2, $colorMain1, $colorMain1);
-            top: 50vh;
-        }
-        @media (max-width:320px) {
-            right: 0px;
-        }
-        p {
-            font-size: $subtitle;
-            color: $colorMain2;
-            writing-mode: vertical-lr;
-            margin: 0;
-            @media (max-width: 768px) {
-                font-size: $s_content;
-            }
-        }
-        p:hover {
-            color: $colorMain1;
-        }
-    }
-    <<<<<<< HEAD======= // img {
-    //     width: 50%;
-    //     margin-left: 60px;
-    //     // margin-top: 100px;
-    // }
-    >>>>>>>devKelly
-}
-
-.blogViewSearchBar {
-    // border: 1px solid blue;
-    width: 600px;
-    height: 32px;
-    margin: 80px 50px auto auto;
-    display: flex;
-    justify-content: flex-end;
-    @media (max-width: 768px) {
-        // border: 1px solid red;
-        width: 250px;
-        margin: 0 auto;
-        margin-top: 30px;
-    }
-    input {
-        background-color: lightgray;
-        border: none;
-        border-radius: 5px 5px 5px 5px;
-    }
-    .blogSearch {
-        // width: 30px;
-        // padding: 0;
-        // margin: 0;
-        // border: none;
-        // background-color: lightgray;
-        // border-radius: 0px 5px 5px 0px;
-        // height: 0px;
-        // font-size: $s_content;
-        font-size: $s_content;
-        margin-left: 10px;
-        // margin-right: 20px;
-        @include button(70px, 30px, $colorSecondary2, $colorMain1, $colorMain1);
-        img {
-            width: 25px;
-            height: 25px;
-            // border: 1px solid red;
-        }
-    }
-}
-
-.chooseBlock {
-    // width: 100%;
-    margin: 0;
-    <<<<<<< HEAD // border: 1px solid red;
-    .blogBtn {
-        .blogFBtn {
-            border: none;
-            &:hover {
-                color: $colorMain1;
-            }
-        }
-        .blogFBtn3 {
-            margin-right: 40px;
-            @media (max-width: 768px) {
-                margin: 0 auto;
-                margin-right: 0px;
-            }
-        }
-        @media (max-width:768px) {
-            margin: 0 auto;
-            ======= // display: flex;
-            // justify-content: flex-end;
-            .blogFBtn {
-                border: none;
-                &:hover {
-                    color: $colorMain1;
-                }
-            }
-            .blogFBtn3 {
-                margin-right: 40px;
-                @media (max-width: 768px) {
-                    // border: 1px solid red;
-                    margin-right: 10px;
-                    >>>>>>>devKelly
-                }
-            }
-            @media (max-width:576px) {
-                // border: 1px solid red;
-                width: 90%;
-                margin-left: 5%;
-            }
-        }
-        .container {
-            padding: 0;
-            margin: 0 auto;
-            .mainBlogCardsArea {
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: space-around;
-                // border: 1px solid red;
-                .cardBlogOnBlogView {
-                    margin: 20px;
-                    // border: 1px solid blue;
-                }
-            }
-            .blogCardsBlockView {
-                // border: 1px solid red;
-                margin-bottom: 40px;
-                // margin-top: 10px;
-                #blogCardsAll {
-                    display: flex;
-                    flex-wrap: wrap;
-                    margin: 0 auto;
-                    justify-content: space-around;
-                    // justify-content: center;
-                }
-            }
-            // -------------手機版輪播
-            .groupPhoneCardBlogCarousel {
-                // border: 1px solid red;
-                width: 100%;
-                margin-top: 40px;
-                margin-bottom: 40px;
-                .innerBlog {
-                    // border: 1px solid blue;
-                    // padding: 0 auto;
-                    max-width: 300px;
-                    margin: 0 auto;
-                    height: 500px;
-                }
-                .groupCarouselIcon {
-                    background-color: $colorMain1;
-                    width: 30px;
-                    height: 50px;
-                }
-            }
-        }
+ @import "./variables";
+ @media screen and (max-width: $breakpoint-md) {
+     .popular {
+         display: none;
+     }
+     .blogCont {
+         min-width: 100%;
+     }
+ }
+ 
+ * {
+     box-sizing: border-box;
+ }
+ 
+ body {
+     margin: 0 auto;
+     background-color: $colorSecondary2;
+     width: 100%;
+ }
+ 
+ a {
+     .addBlogBTN {
+         // border: 1px solid red;
+         z-index: 5;
+         position: fixed;
+         top: 300px;
+         right: 0;
+         @include button(50px, 170px, $colorSecondary2, $colorMain1, $colorMain1);
+         @media (max-width: 768px) {
+             // border: 1px solid red;
+             @include button(35px, 100px, $colorSecondary2, $colorMain1, $colorMain1);
+             top: 50vh;
+         }
+         @media (max-width:320px) {
+             right: 0px;
+         }
+         p {
+             font-size: $subtitle;
+             color: $colorMain2;
+             writing-mode: vertical-lr;
+             margin: 0;
+             @media (max-width: 768px) {
+                 font-size: $s_content;
+             }
+         }
+         p:hover {
+             color: $colorMain1;
+         }
+     }
+     // img {
+     //     width: 50%;
+     //     margin-left: 60px;
+     //     // margin-top: 100px;
+     // }
+ }
+ 
+ .blogViewSearchBar {
+     // border: 1px solid blue;
+     width: 600px;
+     height: 32px;
+     margin: 80px 50px auto auto;
+     display: flex;
+     justify-content: flex-end;
+     @media (max-width: 768px) {
+         // border: 1px solid red;
+         width: 250px;
+         margin: 0 auto;
+         margin-top: 30px;
+     }
+     input {
+         background-color: lightgray;
+         border: none;
+         border-radius: 5px 5px 5px 5px;
+     }
+     .blogSearch {
+         // width: 30px;
+         // padding: 0;
+         // margin: 0;
+         // border: none;
+         // background-color: lightgray;
+         // border-radius: 0px 5px 5px 0px;
+         // height: 0px;
+         // font-size: $s_content;
+         font-size: $s_content;
+         margin-left: 10px;
+         // margin-right: 20px;
+         @include button(70px, 30px, $colorSecondary2, $colorMain1, $colorMain1);
+         img {
+             width: 25px;
+             height: 25px;
+             // border: 1px solid red;
+         }
+     }
+ }
+ 
+ .chooseBlock {
+     // width: 100%;
+     margin: 0;
+     // border: 1px solid red;
+     .blogBtn {
+         .blogFBtn {
+             border: none;
+             &:hover {
+                 color: $colorMain1;
+             }
+         }
+         .blogFBtn3 {
+             margin-right: 40px;
+             @media (max-width: 768px) {
+                 margin: 0 auto;
+                 margin-right: 0px;
+             }
+         }
+         @media (max-width:768px) {
+             margin: 0 auto;
+             // display: flex;
+             // justify-content: flex-end;
+             .blogFBtn {
+                 border: none;
+                 &:hover {
+                     color: $colorMain1;
+                 }
+             }
+             .blogFBtn3 {
+                 margin-right: 40px;
+                 @media (max-width: 768px) {
+                     // border: 1px solid red;
+                     margin-right: 10px;
+                 }
+             }
+             @media (max-width:576px) {
+                 // border: 1px solid red;
+                 width: 90%;
+                 margin-left: 5%;
+             }
+         }
+         .container {
+             padding: 0;
+             margin: 0 auto;
+             .mainBlogCardsArea {
+                 display: flex;
+                 flex-wrap: wrap;
+                 justify-content: space-around;
+                 // border: 1px solid red;
+                 .cardBlogOnBlogView {
+                     margin: 20px;
+                     // border: 1px solid blue;
+                 }
+             }
+             .blogCardsBlockView {
+                 // border: 1px solid red;
+                 margin-bottom: 40px;
+                 // margin-top: 10px;
+                 #blogCardsAll {
+                     display: flex;
+                     flex-wrap: wrap;
+                     margin: 0 auto;
+                     justify-content: space-around;
+                     // justify-content: center;
+                 }
+             }
+             // -------------手機版輪播
+             .groupPhoneCardBlogCarousel {
+                 // border: 1px solid red;
+                 width: 100%;
+                 margin-top: 40px;
+                 margin-bottom: 40px;
+                 .innerBlog {
+                     // border: 1px solid blue;
+                     // padding: 0 auto;
+                     max-width: 300px;
+                     margin: 0 auto;
+                     height: 500px;
+                 }
+                 .groupCarouselIcon {
+                     background-color: $colorMain1;
+                     width: 30px;
+                     height: 50px;
+                 }
+             }
+         }
+     }
+ }
